theory fixes and development of Bloch proof

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -57,9 +57,8 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 \paragraph{}
 %}}}
 
-\section{Author's comments}
 \add{
-\chapter{Metamaterials -- Critique and alternatives}
+\section{Metamaterials -- Critique and alternatives}
 TODO TODO At the end, the author would like to express his concern about the efficiency and practical impact of the metamaterial research in the last years. 
 The number of papers related to metamaterials has rocketed in the last decade in almost unprecedented way % todo cite some MM scientometry here
 , and 
