--- a/theory.tex
+++ b/theory.tex
@@ -797,7 +797,11 @@ Note this theorem does not determine the shape of $\mathbf{u}(\rr)$, $\mathbf{v}
 This theorem is essential for understanding the electromagnetic behaviour of periodic structures, and it deserves a proof. Originally, it was developed for the electron wave function in crystals on the basis of quantum mechanics. The outline of the proof which is the most often found in textbooks (e.g. \cite[p. 134]{ashcroft2005solid}) is based on that the Hamiltonian operator commutes with the operator of discrete translation by the inter-atomic distance. 
  As can be easily shown, two commuting operators share the same eigenstates, which means that the electron wave function at a given energy (i.e. Hamiltonian eigenfunction) must also have a discrete translational symmetry provided its phase can change between atoms (i.e. it is an eigenfunction of the non-hermitian translation operator).
 
-The following proof will be modified to use the explicit, classical formulation of electromagnetism as the rest of this thesis does. 
+The following proof will instead use the explicit, classical formulation of electromagnetism as the rest of this thesis does. We can no further assume the solution in the form of a plane wave (\ref{eq_pw}), but as long as the structure is time-invariant and linear, the electric and magnetic fields can still be decomposed into harmonic waves:
+$\E(\rr, t) = \E(\rr) e^{\ii \omega t},\quad \HH(\rr, t) = \HH(\rr) e^{\ii \omega t}.$
+
+
+
 
 \add{
 \begin{enumerate}
